# video-pipeline

./: .dockerignore  .gitignore  README.md  config.yaml  pipeline.py
stages/01_extract_poses/: Dockerfile  README.md  main.py  pyproject.toml
stages/01_generate/: Dockerfile  README.md  main.py  pyproject.toml
stages/02_interpolate/: .gitignore  pyproject.toml
stages/02_reference_image/: Dockerfile  README.md  main.py  pyproject.toml
stages/03_generate/: Dockerfile  README.md  main.py  pyproject.toml
stages/04_interpolate/: main.py
stages/05_encode/: main.py  pyproject.toml
