[project]
name = "stage-01-extract-poses"
version = "0.1.0"
description = "DW Pose skeleton extraction (rtmlib + onnxruntime)."
requires-python = ">=3.11,<3.12"
dependencies = [
    # rtmlib is OpenMMLab's standalone ONNX wrapper around DWPose. It downloads
    # the YOLOX person detector + dw-ll_ucoco_384 keypoint head on first run
    # and runs them via onnxruntime — no mmcv/mmdet/mmpose toolchain.
    "rtmlib>=0.0.13",
    "onnxruntime-gpu>=1.18",
    # opencv-python comes in as a transitive dep of rtmlib (non-headless build);
    # don't pin opencv-python-headless here or both end up installed and the
    # cv2 namespace collides at import.
    "imageio[ffmpeg,pyav]>=2.36.0",
    "pillow>=10.4.0",
    "numpy>=1.26,<2.0",
    "video-pipeline-common",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
video-pipeline-common = { path = "../../packages/common", editable = true }
