[project]
name = "stage-03-generate"
version = "0.1.0"
description = "Wan 2.2 Animate generation — pose-driven photoreal video from a reference image."
requires-python = ">=3.11,<3.12"
dependencies = [
    # Wan 2.2 was trained in bf16; on Ada/Ampere bf16 needs torch >=2.4. We
    # pin 2.6 to match stage 2/3 (so the HF cache can be shared) and to keep
    # the cu124 wheels consistent.
    "torch==2.6.0",
    "torchvision==0.21.0",
    # WanAnimatePipeline only exists on diffusers main as of Q1 2026 — the
    # 0.34/0.35 wheels have WanPipeline + WanImageToVideoPipeline but not
    # Animate, so the released versions can't drive Wan-Animate. Install from
    # git main; pin a commit when you find one that works for reproducibility.
    "diffusers",
    # Wan ships its T5 text encoder via transformers; >=4.46 is the version
    # the Wan-AI repos test against.
    "transformers>=4.46.0,<5.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.25.0",
    # Wan's tokenizer needs ftfy for unicode normalization.
    "ftfy>=6.2.0",
    "imageio[ffmpeg,pyav]>=2.36.0",
    "pillow>=10.4.0",
    "numpy>=1.26,<2.0",
    "einops>=0.8.0",
    # Wan-Animate's `pose_video` is rendered skeletons (not raw RGB) and
    # `face_video` is face crops — Wan ships a preprocessor we don't have
    # access to from diffusers, so we extract both inline with DWPose.
    # rtmlib is the same DW Pose path the deleted stage 1 used.
    "rtmlib>=0.0.13",
    # onnxruntime-gpu 1.18+ requires cuDNN 9 — our base image is
    # cu12.4-cudnn-runtime which ships cuDNN 9, so this resolves.
    "onnxruntime-gpu>=1.18.0",
    "opencv-python-headless>=4.10.0",
    "video-pipeline-common",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
diffusers = { git = "https://github.com/huggingface/diffusers.git", branch = "main" }
video-pipeline-common = { path = "../../packages/common", editable = true }
