[project]
name = "stage-04-interpolate"
version = "0.1.0"
description = "RIFE frame interpolation: fps_generate → target_fps."
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "opencv-python>=4.10.0.84",
    "numpy>=1.26,<2.0",
    "tqdm>=4.66.0",
    "imageio[ffmpeg,pyav]>=2.36.0",
    "scikit-video",
    "moviepy",
    "video-pipeline-common",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
video-pipeline-common = { path = "../../packages/common", editable = true }
