[project]
name = "stage-03-generate"
version = "0.1.0"
description = "AnimateDiff + ControlNet (DW Pose) + IPAdapter FaceID generation."
requires-python = ">=3.11,<3.12"
dependencies = [
    # transformers 4.57+ refuses to torch.load on torch<2.6 (CVE-2025-32434),
    # and Realistic_Vision_V6's text encoder ships as pickle .bin (no
    # safetensors variant), so any torch<2.6 build crashes at pipeline load.
    # Stage 3 doesn't import mmcv, so stage 1's torch 2.4.1 ABI lock doesn't
    # apply — bump freely. Matches stage 2's torch / cu124 pinning.
    "torch==2.6.0",
    "torchvision==0.21.0",
    # diffusers 0.32+ requires breaking changes in pipeline call signatures we
    # don't want to chase. Pin to 0.31, the line that introduced
    # enable_free_noise (which stage 3 requires).
    "diffusers>=0.31.0,<0.32.0",
    "transformers>=4.45.0,<5.0",
    "accelerate>=1.0.0",
    # diffusers' load_ip_adapter auto-loads the FaceID companion LoRA if PEFT
    # is available; without PEFT it logs "PEFT backend is required" and silently
    # skips the LoRA, giving weak identity transfer with no error.
    "peft>=0.7.0",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.25.0",
    "imageio[ffmpeg,pyav]>=2.36.0",
    "pillow>=10.4.0",
    "numpy>=1.26,<2.0",
    "einops>=0.8.0",
    "video-pipeline-common",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

# cu121 wheels topped out at torch 2.5.1; torch 2.6+ ships cu124 only.
# Wheel-bundled cuda libs make this independent of the docker base image's CUDA version.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
video-pipeline-common = { path = "../../packages/common", editable = true }
